<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#378F8D8D"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/settingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/resetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/resetButton"
                app:srcCompat="@drawable/sinchronize_64" />

            <TextView
                android:id="@+id/resetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/resetText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/favButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favButton"
                app:srcCompat="@drawable/star_64" />

            <TextView
                android:id="@+id/favText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/favText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/setButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/setButton"
                app:srcCompat="@drawable/settings_4_64" />

            <TextView
                android:id="@+id/setText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/setText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/Rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingBar"
        android:layout_centerHorizontal="true"
        android:background="#FFEB3B"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/Rounds"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/PlayPause"
        android:layout_below="@id/Rounds"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/Timer"
        android:textColor="#FF0000"
        android:textSize="100sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/PlayPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Play"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="#B3B0B0"
            android:contentDescription="@string/Play"
            app:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/Pause"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="#595757"
            android:contentDescription="@string/Pause"
            app:srcCompat="@android:drawable/ic_media_pause" />

    </LinearLayout>

</RelativeLayout>